web-infras/parser/tests/fixtures/babel/es2015/uncategorised/220/output.txt
[SyntaxError]: invalid left value (1,1)
1|[v] += ary
 |^
